test/exercises/c-ray/c-ray.noreal.good
c-ray.chpl:116: error: pixelType must be an integral type
